@@ -1,6 +1,8 @@
 release 1.0.1 (2008-11/12)
--
-
+- Support the getting form parameters from a request,
+  see HttpRequestContext.getFormParameters. Filters may use this method to
+  get access to form parameters.
+  
 release 1.0 (2008-10-13)
 - The response filter chain will now get invoked if an exception is thrown
   from a request filter or a resource class and is mapped to a response.
